--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,17 +1,17 @@
 
 body {
     background-color: #AFAFAF;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+/*     -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; */
     overflow-x: hidden;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex: none;
+/*     flex: none;
     margin: 0 auto;
-    position: relative;
+    position: relative; */
 }
 
 
